Fix: add a bit more of color to the navbar's bg and improve the contrast

--- a/src/components/Globals/Navigation/Navigation.module.css
+++ b/src/components/Globals/Navigation/Navigation.module.css
@@ -15,6 +15,7 @@
   margin-block: 0rem;
   width: 100%;
   animation: stickyNav linear forwards;
+  background-color: #a3ffc213;
   backdrop-filter: blur(10px);
 
   .menu {
